Add automated Spark data quality tests